cmake_minimum_required (VERSION 2.6) 
project (ICP)

option (BUILD_ICP_DLL "whether use icp dll" ON)
#FIND_PATH(BOOST_DIR "boost")
#include_directories("${BOOST_DIR}")
if(BUILD_ICP_DLL)
    include_directories("D:/boost")
    include_directories("${CMAKE_CURRENT_PROJECT_DIR}/libICP" .)
    AUX_SOURCE_DIRECTORY("libICP" LIBICP_SRC_FILES)
    add_library(icp SHARED ICP.cpp ${LIBICP_SRC_FILES})
else(BUILD_ICP_DLL)
    file(COPY "icp.lib" DESTINATION "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
    file(COPY "icp.dll" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
endif(BUILD_ICP_DLL)
